# python-template

./: Taskfile.yml  init-template.sh  pyproject.toml
.github/workflows/: lint.yml
